Fallback to echo server only if there are no custom responses defined

--- a/tests/custom_responses/config.yml
+++ b/tests/custom_responses/config.yml
@@ -7,3 +7,8 @@
   body: '/custom_responses/mypage.html'
 
 - path: '/all/defaults'
+
+- path: '/'
+  headers:
+    'Content-Type': 'application/json'
+    'X-Page-Type': 'custom'
